1.11.0 /
[Alexandr Topilski]
- EULA dialog
- Json keys validation
- [Redis] Full support JSON.GET/JSON.SET commands
- [Redis] Basic support RediSearch, redis-graph types 
- [Redis] MGET command UI handling

1.10.0 / November 4, 2017
[Alexandr Topilski]
- Validate server commands
- Commands complex value
- Hex editor save value

1.9.10 / October 28, 2017
[Alexandr Topilski]
- [Redis] redis-graph commands support
- [Redis] redisearch commands support
- [Redis] rejson commands support
- [Redis] neural-redis commands support
- [Redis] Handle runtime commands

1.9.5 / October 23, 2017
[Alexandr Topilski]
- [LMDB] Drop database
- Stabilization

1.9.4 / October 20, 2017
[Alexandr Topilski]
- [Redis] Decrement becomes self increment #74
- [ForestDB] Create/Remove database
- Send statistic
- Cant save config and restore #73
- Recover Android build

1.9.3 / October 12, 2017
[Alexandr Topilski]
- Optimization in key inserting routine
- Bug fixes

1.9.2 / October 11, 2017
[Alexandr Topilski]
- [Memcached] fixed invalid INFO command execution
- UI settings layout changed, without backward compatibility
- Changed displaying of namespace
- Complex namespace separator

1.9.1 / October 10, 2017
[Alexandr Topilski]
- [SSDB] Auth command
- [LMDB] Create/Remove database
- Bug fixes

1.9.0 / October 2, 2017
[Alexandr Topilski]
- [LMDB] Support single file db
- Ui improvements

1.8.2 / September 27, 2017
[Alexandr Topilski]
- Move web links into "Help" menu #69
- [Windows] Processor featuring BMI2 extensions required #45
- FastoNoSQL silently fails to launch, because it mistakenly assumes my CPU supports AVX #29
- The Windows Error Reporting GUI fails to appear when FastoNoSQL crashes #28

1.8.1 / September 19, 2017
[Alexandr Topilski]
- [Redis] CONFIG GET does not work #43

1.8.0 / September 15, 2017
[Alexandr Topilski]
- [Redis] SSL connection (Azure service)
- [Redis] Crash on ubuntu 16.04 when running transaction on Redis #42

1.7.1 / August 17, 2017
[Alexandr Topilski]