@@ -29,7 +29,9 @@ namespace fastonosql {
 namespace core {
 namespace {
 
-const std::vector<Field> forestdb_common_fields = {Field(FORESTDB_FILE_NAME_LABEL, common::Value::TYPE_STRING)};
+const std::vector<Field> forestdb_common_fields = {
+    Field(FORESTDB_DB_FILE_PATH_LABEL, common::Value::TYPE_STRING),
+    Field(FORESTDB_DB_FILE_SIZE_LABEL, common::Value::TYPE_ULONG_INTEGER)};
 
 }  // namespace
 
@@ -45,7 +47,7 @@ std::vector<info_field_t> DBTraits<FORESTDB>::GetInfoFields() {
 }
 namespace forestdb {
 
-ServerInfo::Stats::Stats() : db_path() {}
+ServerInfo::Stats::Stats() : db_path(), db_size() {}
 
 ServerInfo::Stats::Stats(const std::string& common_text) {
   size_t pos = 0;
@@ -56,8 +58,13 @@ ServerInfo::Stats::Stats(const std::string& common_text) {
     size_t delem = line.find_first_of(':');
     std::string field = line.substr(0, delem);
     std::string value = line.substr(delem + 1);
-    if (field == FORESTDB_FILE_NAME_LABEL) {
+    if (field == FORESTDB_DB_FILE_PATH_LABEL) {
       db_path = value;
+    } else if (field == FORESTDB_DB_FILE_SIZE_LABEL) {
+      off_t sz;
+      if (common::ConvertFromString(value, &sz)) {
+        db_size = sz;
+      }
     }
     start = pos + 2;
   }
@@ -67,6 +74,8 @@ common::Value* ServerInfo::Stats::GetValueByIndex(unsigned char index) const {
   switch (index) {
     case 0:
       return new common::StringValue(db_path);
+    case 1:
+      return new common::FundamentalValue(db_size);
     default:
       break;
   }
@@ -83,6 +92,8 @@ common::Value* ServerInfo::GetValueByIndexes(unsigned char property, unsigned ch
   switch (property) {
     case 0:
       return stats_.GetValueByIndex(field);
+    case 1:
+      return stats_.GetValueByIndex(field);
     default:
       break;
   }
@@ -92,7 +103,8 @@ common::Value* ServerInfo::GetValueByIndexes(unsigned char property, unsigned ch
 }
 
 std::ostream& operator<<(std::ostream& out, const ServerInfo::Stats& value) {
-  return out << FORESTDB_FILE_NAME_LABEL ":" << value.db_path << MARKER;
+  return out << FORESTDB_DB_FILE_PATH_LABEL ":" << value.db_path << MARKER << FORESTDB_DB_FILE_SIZE_LABEL ":"
+             << value.db_size << MARKER;
 }
 
 std::ostream& operator<<(std::ostream& out, const ServerInfo& value) {
