@@ -20,10 +20,6 @@
 
 #include "core/config/config.h"
 
-#define UNQLITE_DEFAULT_ENV_FLAGS \
-  0x00000002  // unqlite Environment Flags
-              // UNQLITE_OPEN_READWRITE        0x00000002
-
 namespace fastonosql {
 namespace core {
 namespace unqlite {
