@@ -34,6 +34,7 @@ typedef struct unqlite NativeConnection;
 common::Error CreateConnection(const Config& config, NativeConnection** context);
 common::Error TestConnection(const Config& config);
 
+// path is file
 class DBConnection : public core::internal::CDBConnection<NativeConnection, Config, UNQLITE> {
  public:
   typedef core::internal::CDBConnection<NativeConnection, Config, UNQLITE> base_class;
