@@ -22,7 +22,8 @@
 
 #define UNQLITE_STATS_LABEL "# Stats"
 
-#define UNQLITE_DB_PATH_LABEL "file_name"
+#define UNQLITE_DB_FILE_PATH_LABEL "db_path"
+#define UNQLITE_DB_FILE_SIZE_LABEL "db_size"
 
 namespace fastonosql {
 namespace core {
@@ -37,6 +38,7 @@ class ServerInfo : public IServerInfo {
     explicit Stats(const std::string& common_text);
     common::Value* GetValueByIndex(unsigned char index) const override;
     std::string db_path;
+    off_t db_size;
   } stats_;
 
   ServerInfo();
