@@ -24,7 +24,7 @@ namespace fastonosql {
 namespace gui {
 namespace forestdb {
 
-class ConnectionWidget : public ConnectionLocalWidgetDirectoryPath {
+class ConnectionWidget : public ConnectionLocalWidgetFilePath {
   Q_OBJECT
  public:
   explicit ConnectionWidget(QWidget* parent = Q_NULLPTR);
